--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "author": "satori <huan0016@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "connect-nedb-session": "^0.0.3",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-ws": "^5.0.2",
     "formidable": "^1.2.2",
-    "nedb": "^1.8.0"
+    "md5-node": "^1.0.1",
+    "nedb": "^1.8.0",
+    "string-random": "^0.1.3"
   }
 }
