--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-ws": "^5.0.2",
     "formidable": "^2.0.1",
     "interrelated": "^2.0.0-0",
+    "level": "^7.0.1",
     "md5-node": "^1.0.1",
     "nedb": "^1.8.0",
     "string-random": "^0.1.3"
