--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "formidable": "^2.0.1",
     "interrelated": "^2.0.0-0",
     "level": "^7.0.1",
+    "md5": "^2.3.0",
     "md5-node": "^1.0.1",
     "nedb": "^1.8.0",
+    "request": "^2.88.2",
     "string-random": "^0.1.3"
   }
 }
