--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "satori <huan0016@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.27.2",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-session-nedb": "^1.0.1",
@@ -17,7 +18,6 @@
     "md5": "^2.3.0",
     "md5-node": "^1.0.1",
     "nedb": "^1.8.0",
-    "request": "^2.88.2",
     "string-random": "^0.1.3"
   },
   "scripts": {
